--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Seth Fitzsimmons <seth@mojodna.net>",
   "license": "ISC",
   "dependencies": {
-    "async": "^0.9.0"
+    "async": "^0.9.0",
+    "tiletype": "0.0.3"
   }
 }
