--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "license": "ISC",
   "dependencies": {
     "async": "^0.9.0",
-    "tiletype": "0.0.3"
+    "tiletype": "0.0.3",
+    "sphericalmercator": "^1.0.2",
+    "highland": "^1.25.4"
   }
 }
