--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "async": "^0.9.0",
-    "tiletype": "~0.1.0",
+    "highland": "^2.0.0",
     "sphericalmercator": "^1.0.2",
-    "highland": "^2.0.0"
+    "tilelive": "^4.5.3",
+    "tiletype": "~0.1.0"
   }
 }
