--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^0.9.0",
+    "debug": "^2.2.0",
     "highland": "^2.0.0",
     "sphericalmercator": "^1.0.2",
     "tiletype": "~0.1.0"
