--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "license": "ISC",
   "dependencies": {
-    "async": "^0.9.0",
+    "async": "^1.5.2",
     "debug": "^2.2.0",
     "highland": "^2.0.0",
     "sphericalmercator": "^1.0.2",
-    "tiletype": "~0.1.0"
+    "tiletype": "^0.3.0"
   }
 }
